Fix for Bug#32748: Inconsistent handling of assignments to general_log_file/slow_query_log_file.

The problem was that log file path was rejected if directory
path was empty. The fix is to reject log file path only if it
is entirely empty.


mysql-test/r/log_state.result:
  Update result file.
mysql-test/t/log_state.test:
  A test case for Bug#32748: Inconsistent handling of assignments to
  general_log_file/slow_query_log_file.
sql/set_var.cc:
  Accept file path if dirname is empty.
  Reject file path if it is empty.